# WebsocketSingalServer

./: CMakeLists.txt  README.md  WebsocketSignalServer.cpp  cert.pem  config.json  dh.pem  key.pem  message_queue.cpp  message_queue.h  signal_server.cpp  signal_server.h  tls_server.cpp  websocket_server.cc  websocket_server.h  wsSignalServer.service
jsoncpp/: CMakeLists.txt
